[WIP] Update Larky to enable parity (#55)
* Checkpoint

* Fixes #28

* Add struct constructor enhancement and allow EvalException to propogate upwards

* Fixes #51

* Updated larky to use re2.split() to match the python re module

* wrap regular expression in namedtuple

* regular expression tests fully working

* Allow building java 1.8 with java 11 and allow building with java8 as well

* Restructure the larky project. Fixes #18.