@@ -31,6 +31,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -77,7 +78,7 @@ public final class LarkyEvaluator {
   }
 
   public Module eval(StarFile content)
-      throws IOException, InterruptedException {
+      throws IOException, InterruptedException, EvalException {
     if (pending.contains(content.path())) {
       throw throwCycleError(content.path());
     }
@@ -112,7 +113,7 @@ public final class LarkyEvaluator {
   }
 
   public Object evalWithOutput(StarFile content)
-      throws IOException, InterruptedException {
+      throws IOException, InterruptedException, EvalException {
 
     // Make the modules available as predeclared bindings.
     StarlarkSemantics semantics = StarlarkSemantics.DEFAULT;
@@ -183,7 +184,7 @@ public final class LarkyEvaluator {
         } else {
           loadedModule = evaluator.eval(content.resolve(moduleToLoad + LarkyScript.STAR_EXTENSION));
         }
-      } catch (IOException | InterruptedException e) {
+      } catch (IOException | InterruptedException | EvalException e) {
         throw new RuntimeException(e);
       }
       return loadedModule;
@@ -254,7 +255,7 @@ public final class LarkyEvaluator {
         return null;
       }
 
-      return Path.of(resourceAsURI);
+      return Paths.get(resourceAsURI);
     }
 
     @SuppressWarnings("UnstableApiUsage")
@@ -279,7 +280,7 @@ public final class LarkyEvaluator {
   }
 
   @NotNull
-  private Program compileStarlarkProgram(Module module, ParserInput input, FileOptions options) {
+  private Program compileStarlarkProgram(Module module, ParserInput input, FileOptions options) throws EvalException {
     Program prog;
     try {
       prog = Program.compileFile(StarlarkFile.parse(input, options), module);
@@ -289,7 +290,7 @@ public final class LarkyEvaluator {
         console.error(error.toString());
         errs.add(error.toString());
       }
-      throw new RuntimeException(
+      throw new EvalException(
           String.format(
               "Error compiling Starlark program: %1$s%n" +
                   "%2$s",
